<resources>
    <string name="app_name">Renamer</string>
    <string name="format_hint">Name format</string>
    <string name="default_format">Holiday Pics {DD} {MM} {YYYY}</string>
    <string name="token_help">Tokens: {DD} {MM} {YYYY} {YY} {MMM} {HH} {mm} {ss}</string>
    <string name="select_all">All</string>
    <string name="select_none">None</string>
    <string name="refresh">Refresh</string>
    <string name="rename_selected">Rename selected</string>
    <string name="no_photos">No photos found</string>
    <string name="no_selection">0 selected</string>
    <string name="photo_thumb">Photo</string>
    <string name="selected_count">%1$d / %2$d selected</string>
</resources>
